# pySigma-pipeline-windows

./: .gitignore  README.md  cov.xml  pyproject.toml
.github/workflows/: test.yml
sigma/pipelines/windows/: __init__.py  windows.py
tests/: test_processing_pipelines_windows.py
