[tool.poetry]
name = "pysigma-pipeline-windows"
version = "0.1.1"
description = "pySigma Windows processing pipelines"
authors = ["frack113 <frack113@users.noreply.github.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-pipeline-windows"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
