[tool.poetry]
name = "pysigma-pipeline-windows"
version = "1.2.0"
description = "pySigma Windows processing pipelines"
readme = "README.md"
authors = ["frack113 <frack113@users.noreply.github.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-pipeline-windows"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"

[tool.poetry.dev-dependencies]
black = "^24.1"
pytest = "^8.0"
pytest-cov = "^4.1"
defusedxml = "^0.7"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
